added more comments to index.html

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 
             <!-- Player -->
             <div class="player">
-                <iframe src="https://www.youtube.com/embed/V74l_zS1x8E" allowfullscreen></iframe>
+              <iframe src="https://www.youtube.com/embed/V74l_zS1x8E" allowfullscreen></iframe>
             </div>
 
             <!-- Lead -->
@@ -226,7 +226,9 @@
 
                 <!-- Media Object -->
 
-                <img class="img-profile media-figure" src="https://yt3.ggpht.com/a/AGF-l78OD14co8EI1BqQiGzYkAv9NRTOloTYxYCR9Q=s900-c-k-c0xffffffff-no-rj-mo" alt="">
+                <img class="img-profile media-figure"
+                  src="https://yt3.ggpht.com/a/AGF-l78OD14co8EI1BqQiGzYkAv9NRTOloTYxYCR9Q=s900-c-k-c0xffffffff-no-rj-mo"
+                  alt="">
 
                 <div class="media-body">
 
@@ -257,6 +259,9 @@
 
 
       </div>
+
+      <!-- Sidebar For Recommended Videos -->
+      
       <aside class="aside">
         <header class="recommended_header">
           <div class="up_next">Up next</div>
@@ -476,6 +481,9 @@
             </span>
           </div>
         </div>
+
+        <!-- Show More Recommended Videos -->
+
         <div class="show_more">
           SHOW MORE
         </div>
@@ -541,7 +549,7 @@
 
     <!-- JS Script - Nav Drawer -->
     <script src="./js/nav-drawer.js"></script>
- </div>
+  </div>
 </body>
 
 </html>
