removed redundant empty files, comments on html and css files, updated space between navbar items,chanced main <div> to <main> tag, changed <header> to <nav> tag

--- a/index.html
+++ b/index.html
@@ -12,12 +12,9 @@
 
 <body>
 
-  <div class="main-screen">
-    <!-- Masthead -->
+  <main class="main-screen">
 
-    <header class="masthead bg-style">
-
-      <!-- Masthead Logo -->
+    <nav class="masthead bg-style">
 
       <div class="logo-container">
 
@@ -30,17 +27,12 @@
 
       </div>
 
-      <!-- Search -->
-
       <div class="search">
         <input class="search-input" type=search name=s placeholder="Search..">
         <button class="search-button">
           <i class="material-icons md-18 md-dark">search</i>
         </button>
       </div>
-
-
-      <!-- Masthead User -->
 
       <div class="user-container">
         <a href="">
@@ -55,9 +47,7 @@
         </a>
       </div>
 
-    </header>
-
-    <!-- Navigation Drawer -->
+    </nav>
 
     <div id="nav-drawer" class="bg-style hide">
 
@@ -99,32 +89,25 @@
 
     </div>
     <div class="content">
-      <!-- Scroll -->
 
       <div class="scroll">
 
-        <!-- Content -->
 
         <div class="content">
 
-          <!-- Main Column -->
 
           <div class="main">
 
-            <!-- Player -->
             <div class="player">
               <iframe src="https://www.youtube.com/embed/V74l_zS1x8E" allowfullscreen></iframe>
             </div>
 
-            <!-- Lead -->
 
             <section class="bg-style">
 
-              <!-- Title -->
 
               <h2>Contributing to Open Source Part I: The Easy Way</h2>
 
-              <!-- Media Object -->
 
               <div class="media">
 
@@ -151,7 +134,6 @@
               </div>
               <hr>
 
-              <!-- Button Bar -->
 
               <div class="lead-btn-row">
 
@@ -183,8 +165,6 @@
               </div>
             </section>
 
-            <!-- Description -->
-
             <section class="bg-style">
               <h3>Published on Feb 27, 2014</h3>
               <p>How do you contribute to open source? In this video, I'll describe the easiest way to make a simple
@@ -200,11 +180,8 @@
               </div>
             </section>
 
-            <!-- Comments -->
-
             <section class="comments bg-style">
 
-              <!-- Create Comment -->
 
               <h3>ALL COMMENTS (2)</h3>
               <div class="media">
@@ -213,18 +190,14 @@
                 <textarea class="media-body" placeholder="Add a pubic comment..."></textarea>
               </div>
 
-              <!-- View Comments -->
 
               <button class="comment-filter">
                 <span>Top comments</span>
                 <i class="material-icons md-dark md-18">arrow_drop_down</i>
               </button>
 
-              <!-- Comment -->
 
               <div class="media">
-
-                <!-- Media Object -->
 
                 <img class="img-profile media-figure"
                   src="https://yt3.ggpht.com/a/AGF-l78OD14co8EI1BqQiGzYkAv9NRTOloTYxYCR9Q=s900-c-k-c0xffffffff-no-rj-mo"
@@ -235,7 +208,6 @@
                   <p class="username">Demo User <span>9 months ago</span></p>
                   <p class="media-body">This is a demo comment.</p>
 
-                  <!-- Comment Social Interactions -->
 
                   <div class="comment-btn-bar">
                     <a href="">
@@ -260,7 +232,6 @@
 
       </div>
 
-      <!-- Sidebar For Recommended Videos -->
 
       <aside class="aside">
         <header class="recommended_header">
@@ -482,7 +453,6 @@
           </div>
         </div>
 
-        <!-- Show More Recommended Videos -->
 
         <div class="show_more">
           SHOW MORE
@@ -490,11 +460,8 @@
       </aside>
     </div>
 
-    <!-- Footer -->
-
     <footer class="footer bg-style">
 
-      <!-- Button Footer Row -->
 
       <div class="button-footer">
         <a href="">
@@ -523,7 +490,6 @@
         </button>
       </div>
 
-      <!-- Primary Links Footer -->
 
       <ul class="primary-links-footer">
         <li>About</li>
@@ -535,7 +501,6 @@
         <li>+YouTube</li>
       </ul>
 
-      <!-- Secondary Links Footer -->
 
       <ul class="secondary-links-footer terms">
         <li>Terms</li>
@@ -547,9 +512,8 @@
 
     </footer>
 
-    <!-- JS Script - Nav Drawer -->
     <script src="./js/nav-drawer.js"></script>
-  </div>
+  </main>
 </body>
 
 </html>
